--- a/index.html
+++ b/index.html
@@ -13,11 +13,21 @@
     </head>
 
     <body>
-        <div class="container">
-            <img class="logo" src="https://avatars.githubusercontent.com/u/90921413?v=4"/>
+        <div>
+            <img class="logo" src="https://avatars.githubusercontent.com/u/90921413?v=4" class="responsive"/>
+        </div>
+        <div">
             <h1>Hi my name is <span class="lavender">Ehllay</span> and this is my awesome new website</h1>
 
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim est sed dignissimos amet sequi facere itaque ad praesentium nisi sit similique, fuga numquam. Nisi deleniti autem magnam excepturi quos reprehenderit.</p>
+        </div>
+        <div class="box">
+            <ul>
+                <li>Lorem</li>
+                <li>Lorem</li>
+                <li>Lorem</li>
+            </ul>
+            
         </div>
     </body>
 </html>
