Added socials box and footer

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script src="https://kit.fontawesome.com/246b841587.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="mystyle.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,13 +22,20 @@
 
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim est sed dignissimos amet sequi facere itaque ad praesentium nisi sit similique, fuga numquam. Nisi deleniti autem magnam excepturi quos reprehenderit.</p>
         </div>
-        <div class="box">
+        <div class="smallbox">
             <ul>
-                <li>Lorem</li>
-                <li>Lorem</li>
-                <li>Lorem</li>
+                <li><a href="https://github.com/Ehllay/"><i class="icon fa-brands fa-github fa-2xl"></i></a></li>
+                <li><a href="https://steamcommunity.com/id/Ehllay"><i class="icon fa-brands fa-steam fa-2xl"></i></a></li>
+                <li><a href="https://www.reddit.com/user/Ehllay"><i class="icon fa-brands fa-reddit fa-2xl"></i></a></li>
             </ul>
             
         </div>
+
+        <footer>
+            <div class="footer">
+                <p>Website made by Ehllay. No JS</p>
+                <p>Fonts by <a href="https://www.fontawesome.com">FontAwesome</a></p>
+            </div>
+        </footer>  
     </body>
 </html>
