--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <script src="https://kit.fontawesome.com/246b841587.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="mystyle.css">
+
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,10 +14,17 @@
     </head>
 
     <body>
+        <noscript>
+            <div class="alert">
+                <span class="closebutton" onclick="this.parentElement.style.display='none';">&times;</span>
+                You don't have JavaScript enabled >:( . I too hate it but enable it for icons to work.
+                It's only for icons I swear!
+            </div>
+        </noscript>
         <div>
-            <img class="logo" src="https://avatars.githubusercontent.com/u/90921413?v=4" class="responsive"/>
+            <img class="logo" src="https://avatars.githubusercontent.com/u/90921413?v=4"/>
         </div>
-        <div">
+        <div>
             <h1>Hi my name is <span class="lavender">Ehllay</span> and this is my awesome new website</h1>
 
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim est sed dignissimos amet sequi facere itaque ad praesentium nisi sit similique, fuga numquam. Nisi deleniti autem magnam excepturi quos reprehenderit.</p>
@@ -34,7 +41,7 @@
         <footer>
             <div class="footer">
                 <p>Website made by Ehllay. No JS</p>
-                <p>Fonts by <a href="https://www.fontawesome.com">FontAwesome</a></p>
+                <p>Well except the icons by by <a href="https://www.fontawesome.com">FontAwesome</a></p>
             </div>
         </footer>  
     </body>
