Fixed more stuff

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <footer>
             <div class="footer">
                 <p>Website made by Ehllay. No JS</p>
-                <p>Well except the icons by by <a href="https://www.fontawesome.com">FontAwesome</a></p>
+                <p>Well except the icons by by <a class="link" href="https://www.fontawesome.com">FontAwesome</a></p>
             </div>
         </footer>  
     </body>
