--- a/index.html
+++ b/index.html
@@ -22,20 +22,25 @@
             </div>
         </noscript>
         <div>
-            <img class="logo" src="https://avatars.githubusercontent.com/u/90921413?v=4"/>
+            <div>
+                <img class="logo" src="https://avatars.githubusercontent.com/u/90921413?v=4"/>
+            </div>
+            <div>
+                <h1>Hi my name is <span class="lavender">Ehllay</span> and this is my awesome new website</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim est sed dignissimos amet sequi facere itaque ad praesentium nisi sit similique, fuga numquam. Nisi deleniti autem magnam excepturi quos reprehenderit.</p>
+            </div>
+            <div class="smallbox">
+                <ul>
+                    <li><a href="https://github.com/Ehllay/"><i class="icon fa-brands fa-github fa-2xl"></i></a></li>
+                    <li><a href="https://steamcommunity.com/id/Ehllay"><i class="icon fa-brands fa-steam fa-2xl"></i></a></li>
+                    <li><a href="https://www.reddit.com/user/Ehllay"><i class="icon fa-brands fa-reddit fa-2xl"></i></a></li>
+                </ul>
+                
+            </div>
         </div>
-        <div>
-            <h1>Hi my name is <span class="lavender">Ehllay</span> and this is my awesome new website</h1>
 
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim est sed dignissimos amet sequi facere itaque ad praesentium nisi sit similique, fuga numquam. Nisi deleniti autem magnam excepturi quos reprehenderit.</p>
-        </div>
-        <div class="smallbox">
-            <ul>
-                <li><a href="https://github.com/Ehllay/"><i class="icon fa-brands fa-github fa-2xl"></i></a></li>
-                <li><a href="https://steamcommunity.com/id/Ehllay"><i class="icon fa-brands fa-steam fa-2xl"></i></a></li>
-                <li><a href="https://www.reddit.com/user/Ehllay"><i class="icon fa-brands fa-reddit fa-2xl"></i></a></li>
-            </ul>
-            
+        <div>
+            <!--Todo: About section-->
         </div>
 
         <footer>
