--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </div>
             <div>
                 <h1>Hi my name is <span class="lavender">Ehllay</span> and this is my awesome new website</h1>
+                <p class="smallbox tinybox">He/him️</p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim est sed dignissimos amet sequi facere itaque ad praesentium nisi sit similique, fuga numquam. Nisi deleniti autem magnam excepturi quos reprehenderit.</p>
             </div>
             <div class="smallbox">
