Added Spanish translation

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
         <script src="https://kit.fontawesome.com/246b841587.js" crossorigin="anonymous"></script>
 
 
@@ -17,7 +18,7 @@
         <noscript>
             <div class="alert">
                 <span class="closebutton" onclick="this.parentElement.style.display='none';">&times;</span>
-                You don't have JavaScript enabled >:( . I too hate it but enable it for icons to work.
+                You don't have JavaScript enabled >:( . I too hate it but enable it for icons to work pls.
                 It's only for icons I swear!
             </div>
         </noscript>
@@ -25,10 +26,13 @@
             <div>
                 <img class="logo" src="https://avatars.githubusercontent.com/u/90921413?v=4"/>
             </div>
-            <div>
+            <div lang="en">
                 <h1>Hi my name is <span class="lavender">Ehllay</span> and this is my awesome new website</h1>
-                <p class="smallbox tinybox">He/him️</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim est sed dignissimos amet sequi facere itaque ad praesentium nisi sit similique, fuga numquam. Nisi deleniti autem magnam excepturi quos reprehenderit.</p>
+                <p>Hi, my name is Elias, and I'm a student who has a deep love for programming, gaming and more! Here you can know how to contact me.</p>
+            </div>
+            <div lang="es" class="spanish">
+                <h1>Hola, mi nombre es <span class="lavender">Elías</span> y esta es mi increíble página web</h1>
+                <p>Soy un estudiante que ama la programación, gaming y mucho más! Aquí sabrás cómo contactarme.</p>
             </div>
             <div class="smallbox">
                 <ul>
@@ -42,6 +46,7 @@
 
         <div>
             <!--Todo: About section-->
+
         </div>
 
         <footer>
