I gave up on language settings

--- a/es/index.html
+++ b/es/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="Content-Language" content="en">
+        <meta http-equiv="Content-Language" content="es">
 
         <script src="https://kit.fontawesome.com/246b841587.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
 
         <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/90921413?v=4">
         <title>Ehllay's Website</title>
@@ -18,21 +18,20 @@
         <noscript>
             <div class="alert">
                 <span class="closebutton" onclick="this.parentElement.style.display='none';">&times;</span>
-                You don't have JavaScript enabled >:( . I too hate it but enable it for icons to work pls.
-                It's only for icons I swear!
+                Tienes JavaScript? Activalo para los iconos 😈
             </div>
         </noscript>
         <div>
             <div>
                 <img class="logo" src="https://avatars.githubusercontent.com/u/90921413?v=4"/>
             </div>
-            <h1>Hi my name is <span class="lavender">Ehllay</span> and this is my awesome new website</h1>
-            <p>Hi, my name is Elias, and I'm a student who has a deep love for programming, gaming and more! Here you can know how to contact me.</p>
+
+            <h1>Hola, mi nombre es <span class="lavender">Elías</span> y esta es mi increíble página web</h1>
+            <p>Soy un estudiante que ama la programación, gaming y mucho más! Aquí sabrás más información sobre mí y cómo contactarme.</p>
             <div class="smallbox">
                 <ul>
                     <li><a href="https://github.com/Ehllay/"><i class="icon fa-brands fa-github fa-2xl"></i></a></li>
                     <li><a href="https://steamcommunity.com/id/Ehllay"><i class="icon fa-brands fa-steam fa-2xl"></i></a></li>
-                    <li><a href="https://www.reddit.com/user/Ehllay"><i class="icon fa-brands fa-reddit fa-2xl"></i></a></li>
                 </ul>
                 
             </div>
@@ -45,8 +44,8 @@
 
         <footer>
             <div class="footer">
-                <p>Website made by Ehllay. No JS</p>
-                <p>Well except the icons by by <a class="link" href="https://www.fontawesome.com">FontAwesome</a></p>
+                <p>Página creada por Elías. No JavaScript</p>
+                <p>Excepto los iconos por <a class="link" href="https://www.fontawesome.com">FontAwesome</a></p>
             </div>
         </footer>  
     </body>
