Added animated logo (so cool)

--- a/es/index.html
+++ b/es/index.html
@@ -11,22 +11,22 @@
         <link rel="stylesheet" href="../style.css">
 
         <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/90921413?v=4">
-        <title>Ehllay's Website</title>
+        <title>Página web de Ehllay</title>
     </head>
 
     <body>
         <noscript>
             <div class="alert">
                 <span class="closebutton" onclick="this.parentElement.style.display='none';">&times;</span>
-                Tienes JavaScript? Activalo para los iconos 😈
+                Tienes JavaScript? Activalo para los iconos.
             </div>
         </noscript>
         <div>
             <div>
-                <img class="logo" src="https://avatars.githubusercontent.com/u/90921413?v=4"/>
+                <img class="logo" src="assets/logo.gif" alt="logo de la curva del dragón"/>
             </div>
 
-            <h1>Hola, mi nombre es <span class="lavender">Elías</span> y esta es mi increíble página web</h1>
+            <h1>Hola, mi nombre es <span class="blue-lavender">Elías</span> y esta es mi increíble página web</h1>
             <p>Soy un estudiante que ama la programación, gaming y mucho más! Aquí sabrás más información sobre mí y cómo contactarme.</p>
             <div class="smallbox">
                 <ul>
