--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </noscript>
         <div>
             <div>
-                <img class="logo" src="https://avatars.githubusercontent.com/u/90921413?v=4"/>
+                <img class="logo" src="assets/logo.gif" alt="dragon curve logo"/>
             </div>
-            <h1>Hi my name is <span class="lavender">Ehllay</span> and this is my awesome new website</h1>
+            <h1>Hi my name is <span class="blue-lavender">Ehllay</span> and this is my awesome new website</h1>
             <p>Hi, my name is Elias, and I'm a student who has a deep love for programming, gaming and more! Here you can know how to contact me.</p>
             <div class="smallbox">
                 <ul>
