Fixed spanish version

--- a/es/index.html
+++ b/es/index.html
@@ -23,7 +23,7 @@
         </noscript>
         <div>
             <div>
-                <img class="logo" src="assets/logo.gif" alt="logo de la curva del dragón"/>
+                <img class="logo" src="../assets/logo.gif" alt="logo de la curva del dragón"/>
             </div>
 
             <h1>Hola, mi nombre es <span class="blue-lavender">Elías</span> y esta es mi increíble página web</h1>
