Added programming section

--- a/index.html
+++ b/index.html
@@ -28,19 +28,35 @@
             </div>
             <h1>Hi my name is <span class="blue-lavender">Ehllay</span> and this is my awesome new website</h1>
             <p>Hi, my name is Elias, and I'm a student who has a deep love for programming, gaming and more! Here you can know how to contact me.</p>
-            <div class="smallbox">
+            <br>
+            <div class="box smallbox">
                 <ul>
-                    <li><a href="https://github.com/Ehllay/"><i class="icon fa-brands fa-github fa-2xl"></i></a></li>
-                    <li><a href="https://steamcommunity.com/id/Ehllay"><i class="icon fa-brands fa-steam fa-2xl"></i></a></li>
-                    <li><a href="https://www.reddit.com/user/Ehllay"><i class="icon fa-brands fa-reddit fa-2xl"></i></a></li>
+                    <li><a href="https://github.com/Ehllay/"><i class="icon fa-brands fa-github fa-2xl" alt="GitHub"></i></a></li>
+                    <li><a href="https://steamcommunity.com/id/Ehllay"><i class="icon fa-brands fa-steam fa-2xl" alt="Steam"></i></a></li>
+                    <li><a href="https://www.reddit.com/user/Ehllay"><i class="icon fa-brands fa-reddit fa-2xl" alt="Reddit"></i></a></li>
                 </ul>
                 
             </div>
         </div>
-
-        <div>
+        <div class="box bigbox">
             <!--Todo: About section-->
-
+            <h1><i class="icon abouticon fa-solid fa-code fa-xl"></i>Programming</h1>
+            <br>
+            <p>I mainly code in Rust, but I also know my fair share of Python, HTML and CSS. I do all my programming stuff with Neovim for general programming, VSCodium for webdev and I use Arch Linux with Hyprland as my OS of choice.</p>
+            <p>Here you can check out what I have cooked:</p>
+            <div class="break">
+                <div>
+                    <h2><a href="https://github.com/Ehllay/hyprland-dotfiles">Hyprland Rice</a></h2>
+                    <p>I have created an awesome <a href="https://hyprland.org">Hyprland</a> Rice with Pywal</p>
+                </div>
+                <img class="sideimage" src="https://github.com/Ehllay/hyprland-dotfiles/raw/desktop-nvidia/screenshots/catppuccin.png" alt="My Hyprland Rice">
+            </div>
+            <div class="break">
+                <div>
+                    <h2>Finfetch</h2>
+                    <p>Yeah this one is a bit of a work in progress... I hope I finish it soon. Basically a neofetch clone written in Rust.</p>
+                </div>
+            </div>
         </div>
 
         <footer>
