--- a/es/index.html
+++ b/es/index.html
@@ -28,7 +28,7 @@
 
             <h1>Hola, mi nombre es <span class="blue-lavender">Elías</span> y esta es mi increíble página web</h1>
             <p>Soy un estudiante que ama la programación, gaming y mucho más! Aquí sabrás más información sobre mí y cómo contactarme.</p>
-            <div class="smallbox">
+            <div class="box smallbox">
                 <ul>
                     <li><a href="https://github.com/Ehllay/"><i class="icon fa-brands fa-github fa-2xl"></i></a></li>
                     <li><a href="https://steamcommunity.com/id/Ehllay"><i class="icon fa-brands fa-steam fa-2xl"></i></a></li>
