--- a/es/index.html
+++ b/es/index.html
@@ -37,15 +37,32 @@
             </div>
         </div>
 
-        <div>
+        <div class="box bigbox">
             <!--Todo: About section-->
-
+            <h1><i class="icon abouticon fa-solid fa-code fa-xl"></i>Programación</h1>
+            <br>
+            <p>Yo mormalmente escribo código en Rust, pero también sé Python, HTML y CSS, entre otros. Generalmente escribo código con Neovim pero también uso VSCodium para desarrollo web y mi SO es Arch Linux con Hyprland.</p>
+            <p>Aquí puedes ver lo que he hecho:</p>
+            <div class="break">
+                <div>
+                    <h2><a href="https://github.com/Ehllay/hyprland-dotfiles">Hyprland Rice</a></h2>
+                    <p>He creado un rice impresionante con <a href="https://hyprland.org">Hyprland</a> y Pywal</p>
+                </div>
+                <img class="sideimage" src="https://github.com/Ehllay/hyprland-dotfiles/raw/desktop-nvidia/screenshots/catppuccin.png" alt="My Hyprland Rice">
+            </div>
+            <div class="break">
+                <div>
+                    <h2><a href="https://github.com/Ehllay/finfetch">Finfetch</a></h2>
+                    <p>Este projecto no esta completo todavía, aún queda mucho que hacer. Básicamente un clon de Neofetch en Rust.</p>
+                </div>
+            </div>
         </div>
 
         <footer>
             <div class="footer">
                 <p>Página creada por Elías. No JavaScript</p>
                 <p>Excepto los iconos por <a class="link" href="https://www.fontawesome.com">FontAwesome</a></p>
+                <p>Código fuente <a href="https://github.com/Ehllay/ehllay.github.io">aquí</a>, disfruta copiando esta página!</p>
             </div>
         </footer>  
     </body>
