--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <div class="break">
                 <div>
                     <h2><a href="https://github.com/Ehllay/hyprland-dotfiles">Hyprland Rice</a></h2>
-                    <p>I have created an awesome <a href="https://hyprland.org">Hyprland</a> Rice with Pywal</p>
+                    <p>I daly drive an awesome <a href="https://hyprland.org">Hyprland</a> Rice with Pywal. Because of it people think NASA desktops are like that.</p>
                 </div>
                 <img class="sideimage" src="https://github.com/Ehllay/hyprland-dotfiles/raw/desktop-nvidia/screenshots/catppuccin.png" alt="My Hyprland Rice">
             </div>
             <div class="break">
                 <div>
-                    <h2>Finfetch</h2>
+                    <h2><a href="https://github.com/Ehllay/finfetch">Finfetch</a></h2>
                     <p>Yeah this one is a bit of a work in progress... I hope I finish it soon. Basically a neofetch clone written in Rust.</p>
                 </div>
             </div>
@@ -63,6 +63,7 @@
             <div class="footer">
                 <p>Website made by Ehllay. No JS</p>
                 <p>Well except the icons by by <a class="link" href="https://www.fontawesome.com">FontAwesome</a></p>
+                <p>Source code <a href="https://github.com/Ehllay/ehllay.github.io">here</a>, enjoy copying this page!</p>
             </div>
         </footer>  
     </body>
