Moved gif to webm

--- a/es/index.html
+++ b/es/index.html
@@ -23,7 +23,7 @@
         </noscript>
         <div>
             <div>
-                <img class="logo" src="../assets/logo.gif" alt="logo de la curva del dragón"/>
+                <video class="logo" autoplay="true" src="assets/logo.webm" alt="Logo curva del dragón"/>
             </div>
 
             <h1>Hola, mi nombre es <span class="blue-lavender">Elías</span> y esta es mi increíble página web</h1>
@@ -43,13 +43,6 @@
             <br>
             <p>Yo mormalmente escribo código en Rust, pero también sé Python, HTML y CSS, entre otros. Generalmente escribo código con Neovim pero también uso VSCodium para desarrollo web y mi SO es Arch Linux con Hyprland.</p>
             <p>Aquí puedes ver lo que he hecho:</p>
-            <div class="break">
-                <div>
-                    <h2><a href="https://github.com/Ehllay/hyprland-dotfiles">Hyprland Rice</a></h2>
-                    <p>He creado un rice impresionante con <a href="https://hyprland.org">Hyprland</a> y Pywal</p>
-                </div>
-                <img class="sideimage" src="https://github.com/Ehllay/hyprland-dotfiles/raw/desktop-nvidia/screenshots/catppuccin.png" alt="My Hyprland Rice">
-            </div>
             <div class="break">
                 <div>
                     <h2><a href="https://github.com/Ehllay/finfetch">Finfetch</a></h2>
