--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </noscript>
         <div>
             <div>
-                <img class="logo" src="assets/logo.gif" alt="dragon curve logo"/>
+                <video class="logo" autoplay="true" src="assets/logo.webm" alt="dragon curve logo"/>
             </div>
             <h1>Hi my name is <span class="blue-lavender">Ehllay</span> and this is my awesome new website</h1>
             <p>Hi, my name is Elias, and I'm a student who has a deep love for programming, gaming and more! Here you can know how to contact me.</p>
@@ -44,13 +44,6 @@
             <br>
             <p>I mainly code in Rust, but I also know my fair share of Python, HTML and CSS. I do all my programming stuff with Neovim for general programming, VSCodium for webdev and I use Arch Linux with Hyprland as my OS of choice.</p>
             <p>Here you can check out what I have cooked:</p>
-            <div class="break">
-                <div>
-                    <h2><a href="https://github.com/Ehllay/hyprland-dotfiles">Hyprland Rice</a></h2>
-                    <p>I daly drive an awesome <a href="https://hyprland.org">Hyprland</a> Rice with Pywal. Because of it people think NASA desktops are like that.</p>
-                </div>
-                <img class="sideimage" src="https://github.com/Ehllay/hyprland-dotfiles/raw/desktop-nvidia/screenshots/catppuccin.png" alt="My Hyprland Rice">
-            </div>
             <div class="break">
                 <div>
                     <h2><a href="https://github.com/Ehllay/finfetch">Finfetch</a></h2>
