Applied image size

--- a/es/index.html
+++ b/es/index.html
@@ -2,9 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <meta http-equiv="Content-Language" content="es">
+        <meta name="description" content="La página web personal de Ehllay"
 
-        <script src="https://kit.fontawesome.com/246b841587.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/246b841587.js" crossorigin="anonymous" defer async></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
@@ -23,7 +25,7 @@
         </noscript>
         <div>
             <div>
-                <video class="logo" autoplay="true" src="assets/logo.webm" alt="Logo curva del dragón"/>
+                <video class="logo" autoplay="true" src="assets/logo.webm" alt="Logo curva del dragón" width="500px", height="500px"/>
             </div>
 
             <h1>Hola, mi nombre es <span class="blue-lavender">Elías</span> y esta es mi increíble página web</h1>
@@ -55,7 +57,7 @@
             <div class="footer">
                 <p>Página creada por Elías. No JavaScript</p>
                 <p>Excepto los iconos por <a class="link" href="https://www.fontawesome.com">FontAwesome</a></p>
-                <p>Código fuente <a href="https://github.com/Ehllay/ehllay.github.io">aquí</a>, disfruta copiando esta página!</p>
+                <p>Código fuente disponible en <a href="https://github.com/Ehllay/ehllay.github.io">GitHub</a>, disfruta copiando esta página!</p>
             </div>
         </footer>  
     </body>
