--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
+        <meta name="description" content="Ehllay's personal website"
+
         <meta http-equiv="Content-Language" content="en">
 
-        <script src="https://kit.fontawesome.com/246b841587.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/246b841587.js" crossorigin="anonymous" defer async></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
@@ -24,7 +27,7 @@
         </noscript>
         <div>
             <div>
-                <video class="logo" autoplay="true" src="assets/logo.webm" alt="dragon curve logo"/>
+                <video class="logo" autoplay="true" src="assets/logo.webm" alt="dragon curve logo" width="500px", height="500px"/>
             </div>
             <h1>Hi my name is <span class="blue-lavender">Ehllay</span> and this is my awesome new website</h1>
             <p>Hi, my name is Elias, and I'm a student who has a deep love for programming, gaming and more! Here you can know how to contact me.</p>
@@ -56,7 +59,7 @@
             <div class="footer">
                 <p>Website made by Ehllay. No JS</p>
                 <p>Well except the icons by by <a class="link" href="https://www.fontawesome.com">FontAwesome</a></p>
-                <p>Source code <a href="https://github.com/Ehllay/ehllay.github.io">here</a>, enjoy copying this page!</p>
+                <p>Source code available on <a href="https://github.com/Ehllay/ehllay.github.io">GitHub</a>, enjoy copying this page!</p>
             </div>
         </footer>  
     </body>
