--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="https://kit.fontawesome.com/246b841587.js" crossorigin="anonymous" defer async></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet" media="screen">
         <link rel="stylesheet" href="style.css">
 
         <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/90921413?v=4">
