--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="Ehllay's personal website"
 
         <meta http-equiv="Content-Language" content="en">
+        <meta http-equiv="Cache-control" content="public">
 
         <script src="https://kit.fontawesome.com/246b841587.js" crossorigin="anonymous" defer async></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
