Fixed spanish version

--- a/es/index.html
+++ b/es/index.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <meta http-equiv="Content-Language" content="es">
         <meta name="description" content="La página web personal de Ehllay"
+
+        <meta http-equiv="Content-Language" content="es">
+        <meta http-equiv="Cache-control" content="public">
 
         <script src="https://kit.fontawesome.com/246b841587.js" crossorigin="anonymous" defer async></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet" media="screen">
         <link rel="stylesheet" href="../style.css">
 
         <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/90921413?v=4">
