--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head lang="en">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="Ehllay's personal website"
@@ -35,9 +35,9 @@
             <br>
             <div class="box smallbox">
                 <ul>
-                    <li><a href="https://github.com/Ehllay/"><i class="icon fa-brands fa-github fa-2xl" alt="GitHub"></i></a></li>
-                    <li><a href="https://steamcommunity.com/id/Ehllay"><i class="icon fa-brands fa-steam fa-2xl" alt="Steam"></i></a></li>
-                    <li><a href="https://www.reddit.com/user/Ehllay"><i class="icon fa-brands fa-reddit fa-2xl" alt="Reddit"></i></a></li>
+                    <li><a href="https://github.com/Ehllay/" aria-label="My GitHub profile"><i class="icon fa-brands fa-github fa-2xl" alt="GitHub"></i></a></li>
+                    <li><a href="https://steamcommunity.com/id/Ehllay" aria-label="My Steam profile"><i class="icon fa-brands fa-steam fa-2xl" alt="Steam"></i></a></li>
+                    <li><a href="https://www.reddit.com/user/Ehllay" aria-label="My Reddit profile"><i class="icon fa-brands fa-reddit fa-2xl" alt="Reddit"></i></a></li>
                 </ul>
                 
             </div>
