--- a/es/index.html
+++ b/es/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
@@ -34,8 +34,8 @@
             <p>Soy un estudiante que ama la programación, gaming y mucho más! Aquí sabrás más información sobre mí y cómo contactarme.</p>
             <div class="box smallbox">
                 <ul>
-                    <li><a href="https://github.com/Ehllay/"><i class="icon fa-brands fa-github fa-2xl"></i></a></li>
-                    <li><a href="https://steamcommunity.com/id/Ehllay"><i class="icon fa-brands fa-steam fa-2xl"></i></a></li>
+                    <li><a href="https://github.com/Ehllay/" aria-label="Mi perfil de GitHub"><i class="icon fa-brands fa-github fa-2xl"></i></a></li>
+                    <li><a href="https://steamcommunity.com/id/Ehllay" aria-label="Mi perfil de Steam"><i class="icon fa-brands fa-steam fa-2xl"></i></a></li>
                 </ul>
                 
             </div>
