Fixed broken html

--- a/es/index.html
+++ b/es/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <meta name="description" content="La página web personal de Ehllay"
+        <meta name="description" content="La página web personal de Ehllay">
 
         <meta http-equiv="Content-Language" content="es">
         <meta http-equiv="Cache-control" content="public">
@@ -27,7 +27,7 @@
         </noscript>
         <div>
             <div>
-                <video class="logo" autoplay="true" src="assets/logo.webm" alt="Logo curva del dragón" width="500px", height="500px"/>
+                <video class="logo" autoplay="true" src="assets/logo.webm" alt="Logo curva del dragón" width="500px" height="500px"/>
             </div>
 
             <h1>Hola, mi nombre es <span class="blue-lavender">Elías</span> y esta es mi increíble página web</h1>
