--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
-    <head lang="en">
+<html lang="en">
+    <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <meta name="description" content="Ehllay's personal website"
+        <meta name="description" content="Ehllay's personal website">
 
         <meta http-equiv="Content-Language" content="en">
         <meta http-equiv="Cache-control" content="public">
@@ -28,7 +28,7 @@
         </noscript>
         <div>
             <div>
-                <video class="logo" autoplay="true" src="assets/logo.webm" alt="dragon curve logo" width="500px", height="500px"/>
+                <video class="logo" autoplay="true" src="assets/logo.webm" alt="dragon curve logo" width="500px" height="500px"/>
             </div>
             <h1>Hi my name is <span class="blue-lavender">Ehllay</span> and this is my awesome new website</h1>
             <p>Hi, my name is Elias, and I'm a student who has a deep love for programming, gaming and more! Here you can know how to contact me.</p>
