--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         </noscript>
         <div>
             <div>
-                <video class="logo" autoplay="true" src="assets/logo.webm" alt="dragon curve logo" width="500px" height="500px"/>
+                <video class="logo" autoplay="true" src="assets/logo.webm" alt="dragon curve logo" width="500px" height="500px">
             </div>
             <h1>Hi my name is <span class="blue-lavender">Ehllay</span> and this is my awesome new website</h1>
             <p>Hi, my name is Elias, and I'm a student who has a deep love for programming, gaming and more! Here you can know how to contact me.</p>
             <br>
             <div class="box smallbox">
                 <ul>
-                    <li><a href="https://github.com/Ehllay/" aria-label="My GitHub profile"><i class="icon fa-brands fa-github fa-2xl" alt="GitHub"></i></a></li>
-                    <li><a href="https://steamcommunity.com/id/Ehllay" aria-label="My Steam profile"><i class="icon fa-brands fa-steam fa-2xl" alt="Steam"></i></a></li>
-                    <li><a href="https://www.reddit.com/user/Ehllay" aria-label="My Reddit profile"><i class="icon fa-brands fa-reddit fa-2xl" alt="Reddit"></i></a></li>
+                    <li><a href="https://github.com/Ehllay/" aria-label="My GitHub profile"><i class="icon fa-brands fa-github fa-2xl" alt="GitHub" aria-hidden="true"></i></a></li>
+                    <li><a href="https://steamcommunity.com/id/Ehllay" aria-label="My Steam profile"><i class="icon fa-brands fa-steam fa-2xl" alt="Steam" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.reddit.com/user/Ehllay" aria-label="My Reddit profile"><i class="icon fa-brands fa-reddit fa-2xl" alt="Reddit" aria-hidden="true"></i></a></li>
                 </ul>
                 
             </div>
