--- a/es/index.html
+++ b/es/index.html
@@ -22,20 +22,20 @@
         <noscript>
             <div class="alert">
                 <span class="closebutton" onclick="this.parentElement.style.display='none';">&times;</span>
-                Tienes JavaScript? Activalo para los iconos.
+                Tienes JavaScript desactivado? Activalo para los iconos.
             </div>
         </noscript>
         <div>
             <div>
-                <video class="logo" autoplay="true" src="assets/logo.webm" alt="Logo curva del dragón" width="500px" height="500px"/>
+                <video class="logo" autoplay="true" src="assets/logo.webm" alt="Logo curva del dragón" width="500px" height="500px">
             </div>
 
             <h1>Hola, mi nombre es <span class="blue-lavender">Elías</span> y esta es mi increíble página web</h1>
             <p>Soy un estudiante que ama la programación, gaming y mucho más! Aquí sabrás más información sobre mí y cómo contactarme.</p>
             <div class="box smallbox">
                 <ul>
-                    <li><a href="https://github.com/Ehllay/" aria-label="Mi perfil de GitHub"><i class="icon fa-brands fa-github fa-2xl"></i></a></li>
-                    <li><a href="https://steamcommunity.com/id/Ehllay" aria-label="Mi perfil de Steam"><i class="icon fa-brands fa-steam fa-2xl"></i></a></li>
+                    <li><a href="https://github.com/Ehllay/" aria-label="Mi perfil de GitHub"><i class="icon fa-brands fa-github fa-2xl" aria-hidden="true"></i></a></li>
+                    <li><a href="https://steamcommunity.com/id/Ehllay" aria-label="Mi perfil de Steam"><i class="icon fa-brands fa-steam fa-2xl" aria-hidden="true"></i></a></li>
                 </ul>
                 
             </div>
