Fixed social labels

--- a/es/index.html
+++ b/es/index.html
@@ -34,8 +34,8 @@
             <p>Soy un estudiante que ama la programación, gaming y mucho más! Aquí sabrás más información sobre mí y cómo contactarme.</p>
             <div class="box smallbox">
                 <ul>
-                    <li><a href="https://github.com/Ehllay/" aria-label="Mi perfil de GitHub"><i class="icon fa-brands fa-github fa-2xl" aria-hidden="true"></i></a></li>
-                    <li><a href="https://steamcommunity.com/id/Ehllay" aria-label="Mi perfil de Steam"><i class="icon fa-brands fa-steam fa-2xl" aria-hidden="true"></i></a></li>
+                    <li><a href="https://github.com/Ehllay/" aria-label="Mi perfil de GitHub"><span class="hidden">GitHub</span><i class="icon fa-brands fa-github fa-2xl" aria-hidden="true"></i></a></li>
+                    <li><a href="https://steamcommunity.com/id/Ehllay" aria-label="Mi perfil de Steam"><span class="hidden">Steam</span><i class="icon fa-brands fa-steam fa-2xl" aria-hidden="true"></i></a></li>
                 </ul>
                 
             </div>
