--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <br>
             <div class="box smallbox">
                 <ul>
-                    <li><a href="https://github.com/Ehllay/" aria-label="My GitHub profile"><i class="icon fa-brands fa-github fa-2xl" alt="GitHub" aria-hidden="true"></i></a></li>
-                    <li><a href="https://steamcommunity.com/id/Ehllay" aria-label="My Steam profile"><i class="icon fa-brands fa-steam fa-2xl" alt="Steam" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.reddit.com/user/Ehllay" aria-label="My Reddit profile"><i class="icon fa-brands fa-reddit fa-2xl" alt="Reddit" aria-hidden="true"></i></a></li>
+                    <li><a href="https://github.com/Ehllay/" aria-label="My GitHub profile"><span class="hidden">GitHub</span><i class="icon fa-brands fa-github fa-2xl" alt="GitHub" aria-hidden="true"></i></a></li>
+                    <li><a href="https://steamcommunity.com/id/Ehllay" aria-label="My Steam profile"><span class="hidden">Steam</span><i class="icon fa-brands fa-steam fa-2xl" alt="Steam" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.reddit.com/user/Ehllay" aria-label="My Reddit profile"><span class="hidden">Reddit</span><i class="icon fa-brands fa-reddit fa-2xl" alt="Reddit" aria-hidden="true"></i></a></li>
                 </ul>
                 
             </div>
