Added more info

--- a/es/index.html
+++ b/es/index.html
@@ -27,11 +27,12 @@
         </noscript>
         <div>
             <div>
-                <video class="logo" autoplay="true" src="assets/logo.webm" alt="Logo curva del dragón" width="500px" height="500px">
+                <video class="logo" autoplay="true" src="../assets/logo.webm" alt="Logo curva del dragón" width="500px" height="500px">
             </div>
 
-            <h1>Hola, mi nombre es <span class="blue-lavender">Elías</span> y esta es mi increíble página web</h1>
+            <h1>Bienvenido a la página de <span class="blue-lavender">Elías</span></h1>
             <p>Soy un estudiante que ama la programación, gaming y mucho más! Aquí sabrás más información sobre mí y cómo contactarme.</p>
+            <p><b class="blue-lavender">Para empleadores:</b> Estoy dispuesto a ser contratado, sin embargo, soy un estudiante a tiempo completo, así que no puedo garantizar que mi horario será consistente. Mi zona horaria es UTC+0. Abajo puedes contactarme.</p>
             <div class="box smallbox">
                 <ul>
                     <li><a href="https://github.com/Ehllay/" aria-label="Mi perfil de GitHub"><span class="hidden">GitHub</span><i class="icon fa-brands fa-github fa-2xl" aria-hidden="true"></i></a></li>
@@ -45,21 +46,26 @@
             <!--Todo: About section-->
             <h1><i class="icon abouticon fa-solid fa-code fa-xl"></i>Programación</h1>
             <br>
-            <p>Yo mormalmente escribo código en Rust, pero también sé Python, HTML y CSS, entre otros. Generalmente escribo código con Neovim pero también uso VSCodium para desarrollo web y mi SO es Arch Linux con Hyprland.</p>
-            <p>Aquí puedes ver lo que he hecho:</p>
+            <p>Yo normalmente escribo código en Rust, pero también sé Python, HTML y CSS, entre otros. Generalmente escribo código con Neovim pero también uso VSCodium para desarrollo web y mi SO es Arch Linux con Hyprland. Si quieres saber más, te animo a que eches un vistazo a mi GitHub</p>
+            <p>Aquí puedes ver los projectos que he hecho:</p>
             <div class="break">
                 <div>
-                    <h2><a href="https://github.com/Ehllay/finfetch">Finfetch</a></h2>
+                    <h2><a href="https://github.com/Ehllay/finfetch">Finfetch</a> [WIP]</h2>
                     <p>Este projecto no esta completo todavía, aún queda mucho que hacer. Básicamente un clon de Neofetch en Rust.</p>
+                </div>
+                <div class="break">
+                    <h2><a href="https://github.com/Ehllay/PyDotSwitcher">PyDotSwitcher</a> [Abandoned]</h2>
+                    <p>Una utilidad de terminal hecha con Python para cambiar dotfiles.</p>
                 </div>
             </div>
         </div>
 
         <footer>
             <div class="footer">
-                <p>Página creada por Elías. No JavaScript</p>
-                <p>Excepto los iconos por <a class="link" href="https://www.fontawesome.com">FontAwesome</a></p>
-                <p>Código fuente disponible en <a href="https://github.com/Ehllay/ehllay.github.io">GitHub</a>, disfruta copiando esta página!</p>
+                <p>Página creada por Elías. No JavaScript.<br>
+                Excepto los iconos por <a class="link" href="https://www.fontawesome.com">FontAwesome</a>.</p>
+                <p>Si necesitas contactarme para cualquier cosa, por favor rellena <a href="https://forms.gle/MbaTvSWcLGYSauDp7">este formulario</a>.</p>
+                <p class="contrast">Código fuente disponible en <a class="contrast" href="https://github.com/Ehllay/ehllay.github.io">GitHub</a>, disfruta copiando esta página!</p>
             </div>
         </footer>  
     </body>
