--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
             <div>
                 <video class="logo" autoplay="true" src="assets/logo.webm" alt="dragon curve logo" width="500px" height="500px">
             </div>
-            <h1>Hi my name is <span class="blue-lavender">Ehllay</span> and this is my awesome new website</h1>
+            <h1>Welcome to <span class="blue-lavender">Ehllay</span>'s website!</h1>
             <p>Hi, my name is Elias, and I'm a student who has a deep love for programming, gaming and more! Here you can know how to contact me.</p>
+            <p><b class="blue-lavender">For hirers:</b> I am currently open for hiring. My timezone is UTC+0, but I am also a full time student, so I can't guarantee my schedule will be consistent. You can contact me down below.</p>
             <br>
             <div class="box smallbox">
                 <ul>
                     <li><a href="https://github.com/Ehllay/" aria-label="My GitHub profile"><span class="hidden">GitHub</span><i class="icon fa-brands fa-github fa-2xl" alt="GitHub" aria-hidden="true"></i></a></li>
                     <li><a href="https://steamcommunity.com/id/Ehllay" aria-label="My Steam profile"><span class="hidden">Steam</span><i class="icon fa-brands fa-steam fa-2xl" alt="Steam" aria-hidden="true"></i></a></li>
                     <li><a href="https://www.reddit.com/user/Ehllay" aria-label="My Reddit profile"><span class="hidden">Reddit</span><i class="icon fa-brands fa-reddit fa-2xl" alt="Reddit" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.twitch.tv/ehllay" aria-label="My Twitch channel"><span class="hidden">Reddit</span><i class="icon fa-brands fa-twitch fa-2xl" alt="Twitch" aria-hidden="true"></i></a> </li>
                 </ul>
                 
             </div>
@@ -46,21 +48,26 @@
             <!--Todo: About section-->
             <h1><i class="icon abouticon fa-solid fa-code fa-xl"></i>Programming</h1>
             <br>
-            <p>I mainly code in Rust, but I also know my fair share of Python, HTML and CSS. I do all my programming stuff with Neovim for general programming, VSCodium for webdev and I use Arch Linux with Hyprland as my OS of choice.</p>
-            <p>Here you can check out what I have cooked:</p>
+            <p>I mainly code in Rust, but I also know my fair share of Python, HTML and CSS. I do all my programming stuff with Neovim for general programming, VSCodium for webdev and I use Arch Linux with Hyprland as my OS of choice. If you want to know more about what I do, feel free to check my GitHub.</p>
+            <p>Here you can check out some of the projects I have cooked:</p>
             <div class="break">
                 <div>
-                    <h2><a href="https://github.com/Ehllay/finfetch">Finfetch</a></h2>
-                    <p>Yeah this one is a bit of a work in progress... I hope I finish it soon. Basically a neofetch clone written in Rust.</p>
+                    <h2><a href="https://github.com/Ehllay/finfetch">Finfetch</a> [WIP]</h2>
+                    <p>A really fast neofetch alternative written in Rust, with extensive customization.</p>
+                </div>
+                <div class="break">
+                    <h2><a href="https://github.com/Ehllay/PyDotSwitcher">PyDotSwitcher</a> [Abandoned]</h2>
+                    <p>A CLI dotfile switching utility made with Python.</p>
                 </div>
             </div>
         </div>
 
         <footer>
             <div class="footer">
-                <p>Website made by Ehllay. No JS</p>
-                <p>Well except the icons by by <a class="link" href="https://www.fontawesome.com">FontAwesome</a></p>
-                <p>Source code available on <a href="https://github.com/Ehllay/ehllay.github.io">GitHub</a>, enjoy copying this page!</p>
+                <p>Website made by Ehllay. No JS<br>
+                Well except the icons by by <a class="link" href="https://www.fontawesome.com">FontAwesome</a>.</p>
+                <p>If you need to contact me for anything, please fill <a href="https://forms.gle/MbaTvSWcLGYSauDp7">this form</a>.</p>
+                <p class="contrast">Source code available on <a class="contrast" href="https://github.com/Ehllay/ehllay.github.io">GitHub</a>, enjoy copying this page!</p>
             </div>
         </footer>  
     </body>
